fix spacing

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -331,7 +331,7 @@ hr {
     .third {
         width: 90vw;
         padding-top: 25px;
-        margin-bottom: 20px;
+        padding-bottom: 25px;
         border: none;
     }
     .paragraph_heading {
